2015-05-26  Marko Myllynen  <myllynen@redhat.com>

	* stdlib/monetary.h: Fix comment.

2015-05-26  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	[BZ #18234]
	* conform/data/sys/stat.h-data (struct stat): Add tests for st_atim,
	st_mtim and st_ctim members.
	* sysdeps/nacl/bits/stat.h (struct stat, struct stat64): Make
	st_atim, st_ctim, st_mtim visible under __USE_XOPEN2K8 only.
	* sysdeps/unix/sysv/linux/generic/bits/stat.h (struct stat,):
	(struct stat64): Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/stat.h (struct stat,):
	(struct stat64): Likewise.
	* sysdeps/unix/sysv/linux/microblaze/bits/stat.h (struct stat,):
	(struct stat64): Likewise.

2015-05-26  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/aarch64/gettimeofday.c (HAVE_VSYSCALL):
	Define and include sysdep-vdso.h.
	* sysdeps/unix/sysv/linux/s390/gettimeofday.c (HAVE_VSYSCALL):
	Likewise.
	* sysdeps/unix/sysv/linux/tile/gettimeofday.c (HAVE_VSYSCALL):
	Likewise.
	* sysdeps/unix/sysv/linux/aarch64/init-first.c (__vdso_gettimeofday):
	Define with VDSO_SYMBOL and use PTR_MANGLE.
	(__vdso_clock_gettime): Likewise.
	(__vdso_clock_getres): Likewise.
	(_libc_vdso_platform_setup): Likewise.
	* sysdeps/unix/sysv/linux/i386/init-first.c (__vdso_clock_gettime):
	Likewise.
	(_libc_vdso_platform_setup): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/init-first.c (__vdso_gettimeofday):
	Likewise.
	(__vdso_clock_gettime): Likewise.
	(__vdso_clock_getres): Likewise.
	(__vdso_get_tbfreq): Likewise.
	(__vdso_getcpu): Likewise.
	(__vdso_time): Likewise.
	(__vdso_sigtramp_rt64): Likewise.
	(__vdso_signtramp32): Likewise.
	(__vdso_sigtramp_rt32): Likewise.
	(_libc_vdso_platform_setup): Likewise.
	* sysdeps/unix/sysv/linux/s390/init-first.c (__vdso_gettimeofay):
	Likewise.
	(__vdso_clock_gettime): Likewise.
	(__vdso_clock_getres): Likewise.
	(_libc_vdso_platform_setup): Likewise.
	* sysdeps/unix/sysv/linux/tile/init-first.c (__vdso_gettimeofday):
	Likewise.
	(__vdso_clock_gettime): Likewise.