@@ -1,0 +1,56 @@
+01010
+Абажур
+абажур
+абажур-10
+брама
+вермішель
+грати
+Граття
+граття
+ґрати
+ебонітовий
+експорт
+експосол
+екс-посол
+експоцентр
+експрацівник
+екс-працівник
+еластичність
+електрика
+ельбор
+елюент
+епатаж
+євгеніка
+Європа
+єдність
+Жмих
+жмих
+зоря
+и
+і
+ї
+й
+Карпати
+криниця
+лебідь
+місяцевий
+місяць
+наразі
+обапіл
+об'їзд
+об’їзд
+обʼїзд
+образ
+опір
+право
+сонце
+тарган
+упродовж
+фантастика
+центр
+чухатися
+ш
+щ
+ь
+ю
+я
