@@ -11,15 +11,15 @@ Version 2.22
 
   438, 4719, 6792, 13028, 13064, 14094, 14841, 14906, 15319, 15467, 15790,
   15969, 16159, 16339, 16351, 16352, 16512, 16560, 16704, 16783, 16850,
-  17053, 17090, 17195, 17269, 17523, 17542, 17569, 17581, 17588, 17596,
-  17620, 17621, 17628, 17631, 17692, 17711, 17715, 17776, 17779, 17792,
-  17836, 17912, 17916, 17930, 17932, 17944, 17949, 17964, 17965, 17967,
-  17969, 17978, 17987, 17991, 17996, 17998, 17999, 18007, 18019, 18020,
-  18029, 18030, 18032, 18036, 18038, 18039, 18042, 18043, 18046, 18047,
-  18049, 18068, 18080, 18093, 18100, 18104, 18110, 18111, 18125, 18128,
-  18138, 18185, 18196, 18197, 18206, 18210, 18211, 18217, 18220, 18221,
-  18234, 18244, 18247, 18287, 18319, 18333, 18346, 18397, 18409, 18410,
-  18412, 18418, 18434, 18444.
+  17053, 17090, 17195, 17269, 17293, 17523, 17542, 17569, 17581, 17588,
+  17596, 17620, 17621, 17628, 17631, 17692, 17711, 17715, 17776, 17779,
+  17792, 17836, 17912, 17916, 17930, 17932, 17944, 17949, 17964, 17965,
+  17967, 17969, 17978, 17987, 17991, 17996, 17998, 17999, 18007, 18019,
+  18020, 18029, 18030, 18032, 18036, 18038, 18039, 18042, 18043, 18046,
+  18047, 18049, 18068, 18080, 18093, 18100, 18104, 18110, 18111, 18125,
+  18128, 18138, 18185, 18196, 18197, 18206, 18210, 18211, 18217, 18220,
+  18221, 18234, 18244, 18247, 18287, 18319, 18333, 18346, 18397, 18409,
+  18410, 18412, 18418, 18434, 18444.
 
 * Cache information can be queried via sysconf() function on s390 e.g. with
   _SC_LEVEL1_ICACHE_SIZE as argument.
